--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "term_nim"
+path = "src/lib.rs"
+
+[[bin]]
+name = "term-nim"
+path = "src/main.rs"
 
 [dependencies]
 axum = "0.6.18"
 local-ip-address = "0.5.3"
+rand = "0.8.5"
 serde = "1.0.164"
 serde_json = "1.0.99"
 tokio = { version = "1.29.1", features = ["full"] }
