--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 
 [dependencies]
 axum = "0.6.18"
+crossterm = "0.26.1"
 local-ip-address = "0.5.3"
 rand = "0.8.5"
 serde = "1.0.164"
