--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ axum = "0.6.18"
 crossterm = "0.26.1"
 local-ip-address = "0.5.3"
 rand = "0.8.5"
-serde = "1.0.164"
+reqwest = { version = "0.11.18", features = ["json"] }
+serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
 tokio = { version = "1.29.1", features = ["full"] }
 tracing-subscriber = "0.3.17"
